--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
             </div>
             <div class="carousel">
                 <img src="assets/project1/1.png" class="carousel-img active" alt="Project Image 1">
-                <img src="assets/project1/2.png" class="carousel-img" alt="Project Image 2">
-                <img src="assets/project1/3.png" class="carousel-img" alt="Project Image 3">
-                <img src="assets/project1/4.png" class="carousel-img" alt="Project Image 4">
-                <img src="assets/project1/5.png" class="carousel-img" alt="Project Image 5">
+                <img src="assets/project1/2.PNG" class="carousel-img" alt="Project Image 2">
+                <img src="assets/project1/3.PNG" class="carousel-img" alt="Project Image 3">
+                <img src="assets/project1/4.PNG" class="carousel-img" alt="Project Image 4">
+                <img src="assets/project1/5.PNG" class="carousel-img" alt="Project Image 5">
 
                 <button class="carousel-btn prev">&#10094;</button>
                 <button class="carousel-btn next">&#10095;</button>
@@ -126,11 +126,11 @@
                     GitHub</a>
             </div>
             <div class="carousel">
-                <img src="assets/project2/1.png" class="carousel-img active" alt="Project Image 1">
-                <img src="assets/project2/2.png" class="carousel-img" alt="Project Image 2">
-                <img src="assets/project2/3.png" class="carousel-img" alt="Project Image 3">
-                <img src="assets/project2/4.png" class="carousel-img" alt="Project Image 4">
-                <img src="assets/project2/5.png" class="carousel-img" alt="Project Image 5">
+                <img src="assets/project2/1.PNG" class="carousel-img active" alt="Project Image 1">
+                <img src="assets/project2/2.PNG" class="carousel-img" alt="Project Image 2">
+                <img src="assets/project2/3.PNG" class="carousel-img" alt="Project Image 3">
+                <img src="assets/project2/4.PNG" class="carousel-img" alt="Project Image 4">
+                <img src="assets/project2/5.PNG" class="carousel-img" alt="Project Image 5">
 
                 <button class="carousel-btn prev">&#10094;</button>
                 <button class="carousel-btn next">&#10095;</button>
