--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             <h1>Hi, I'm <span>Ahmad Muaz Asad</span></h1>
             <h2>CS Student & Aspiring Developer</h2>
             <p>
-                I'm a Computer Science undergraduate passionate about frontend and backend development. I love building
-                responsive, user-friendly, and intelligent applications using React, Python, and AI tools.
+                I'm a Computer Science undergraduate passionate about Full-Stack development. I love exploring new domins of Computer Science.
             </p>
             <a href="#projects" class="btn">View My Work</a>
         </div>
@@ -37,8 +36,8 @@
 
     <section id="about" class="reveal">
         <h2>About Me</h2>
-        <p>I’m a Computer Science student passionate about building web applications, exploring AI, and automating
-            solutions using Python. I’ve worked on full-stack apps with React and SQL, and I'm always learning something
+        <p>I'm a Computer Science undergraduate at FAST-NUCES Lahore passionate about programming. I love 
+            exploring new domains of Computer Science.  I’ve worked on full-stack apps with React and SQL, and I'm always learning something
             new.</p>
     </section>
 
