--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Ahmad Muaz - Computer Science student portfolio showcasing projects, skills, and contact information." />
     <title>Ahmad Muaz | Developer Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
@@ -18,97 +20,111 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
+  <div class="hamburger" onclick="toggleMenu()">☰</div>
     </nav>
+
+    <!-- <button id="theme-toggle">Toggle Theme</button> -->
 
     <header class="hero">
         <div class="hero-text">
             <h1>Hi, I'm <span>Ahmad Muaz Asad</span></h1>
             <h2>CS Student & Aspiring Developer</h2>
             <p>
-                I'm a Computer Science undergraduate passionate about Full-Stack development. I love exploring new domins of Computer Science.
+                I'm a Computer Science undergraduate at FAST-NUCES Lahore passionate about programming. I love
+                exploring new domains of Computer Science. I have learnt to build user-friendly web applications using
+                React, Node, Express and SQL.
             </p>
             <a href="#projects" class="btn">View My Work</a>
         </div>
         <div class="hero-img">
-            <img src="assets/profile3.png" alt="Profile Picture" />
+            <img src="assets/profile3.png" alt="Profile Picture" loading="lazy" />
         </div>
     </header>
 
     <section id="about" class="reveal">
         <h2>About Me</h2>
-        <p>I'm a Computer Science undergraduate at FAST-NUCES Lahore passionate about programming. I love 
-            exploring new domains of Computer Science.  I’ve worked on full-stack apps with React and SQL, and I'm always learning something
+        <p>I'm a Computer Science undergraduate at FAST-NUCES Lahore passionate about programming. I love
+            exploring new domains of Computer Science. I’ve worked on full-stack apps with React and SQL, and I'm always
+            learning something
             new.</p>
     </section>
 
     <section id="skills" class="reveal">
         <h2>Skills</h2>
         <div class="grid">
-            <div class="card">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C%2B%2B_Logo.svg" alt="C++ Logo"
-                    width="40" height="40">
-                <p>C++</p>
-            </div>
-            <div class="card">
-                <img src="https://www.svgrepo.com/show/303206/javascript-logo.svg" alt="JS Logo" width="40" height="40">
-                <p>JavaScript</p>
-            </div>
-            <div class="card">
-                <img src="https://www.svgrepo.com/show/452092/react.svg" alt="REACT Logo" width="40" height="40">
-                <p>React</p>
-            </div>
-            <div class="card">
-                <img src="https://www.svgrepo.com/show/303658/nodejs-1-logo.svg" alt="Node Logo" width="40" height="40">
-                <p>Node</p>
-            </div>
-            <div class="card">
-                <img src="https://www.svgrepo.com/show/303266/nodejs-icon-logo.svg" alt="Express Logo" width="40"
-                    height="40">
-                <p>Express</p>
-            </div>
-            <div class="card">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
-                    alt="Python Logo" width="40" height="40">
-                <p>Python</p>
-            </div>
-            <div class="card">
-                <img src="https://www.svgrepo.com/show/303229/microsoft-sql-server-logo.svg" alt="SQL Logo" width="40"
-                    height="40">
-                <p>SQL</p>
-            </div>
-            <div class="card">
-                <img src="https://www.svgrepo.com/show/303548/git-icon-logo.svg" alt="GIT Logo" width="40" height="40">
-                <p>Git + Github</p>
-            </div>
-            <div class="card">
-                <img src="https://www.svgrepo.com/show/508945/vbnet.svg" alt="VB Logo" width="40" height="40">
-                <p>VB.net</p>
+            <div class="grid">
+                <div class="card">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C%2B%2B_Logo.svg" alt="C++ Logo"
+                        width="40" height="40">
+                    <p>C++</p>
+                </div>
+                <div class="card">
+                    <img src="https://www.svgrepo.com/show/303206/javascript-logo.svg" alt="JS Logo" width="40"
+                        height="40">
+                    <p>JavaScript</p>
+                </div>
+                <div class="card">
+                    <img src="https://www.svgrepo.com/show/452092/react.svg" alt="REACT Logo" width="40" height="40">
+                    <p>React</p>
+                </div>
+                <div class="card">
+                    <img src="https://www.svgrepo.com/show/303658/nodejs-1-logo.svg" alt="Node Logo" width="40"
+                        height="40">
+                    <p>Node</p>
+                </div>
+                <div class="card">
+                    <img src="https://www.svgrepo.com/show/303266/nodejs-icon-logo.svg" alt="Express Logo" width="40"
+                        height="40">
+                    <p>Express</p>
+                </div>
+                <div class="card">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
+                        alt="Python Logo" width="40" height="40">
+                    <p>Python</p>
+                </div>
+                <div class="card">
+                    <img src="https://www.svgrepo.com/show/354200/postgresql.svg" alt="VB Logo" width="40" height="40">
+                    <p>postgreSQL</p>
+                </div>
+                <div class="card">
+                    <img src="https://www.svgrepo.com/show/303229/microsoft-sql-server-logo.svg" alt="SQL Logo"
+                        width="40" height="40">
+                    <p>SQL Server</p>
+                </div>
+                <div class="card">
+                    <img src="https://www.svgrepo.com/show/303548/git-icon-logo.svg" alt="GIT Logo" width="40"
+                        height="40">
+                    <p>Git + Github</p>
+                </div>
+                <div class="card">
+                    <img src="https://www.svgrepo.com/show/508945/vbnet.svg" alt="VB Logo" width="40" height="40">
+                    <p>VB.net</p>
+                </div>
+
             </div>
         </div>
-
     </section>
 
     <section id="projects" class="reveal">
         <h2>Projects</h2>
-
         <div class="project">
             <div class="project-text">
                 <h3>Car Rental Management System</h3>
                 <p>
-                    A full-stack web application that allows users to browse, search, and rent cars through a 
-                    responsive and user-friendly interface. Admins can log in to manage car listings, rental 
+                    A full-stack web application that allows users to browse, search, and rent cars through a
+                    responsive and user-friendly interface. Admins can log in to manage car listings, rental
                     records, and customer data using a secure dashboard. Developed as a semester project to
-                     practice database integration, React frontend development, and CRUD operations using SQL.
+                    practice database integration, React frontend development, and CRUD operations using SQL.
                 </p>
                 <a href="https://github.com/yourusername/car-rental-system" target="_blank" class="project-link">View on
                     GitHub</a>
             </div>
             <div class="carousel">
                 <img src="assets/project1/1.png" class="carousel-img active" alt="Project Image 1">
-                <img src="assets/project1/2.PNG" class="carousel-img" alt="Project Image 2">
-                <img src="assets/project1/3.PNG" class="carousel-img" alt="Project Image 3">
-                <img src="assets/project1/4.PNG" class="carousel-img" alt="Project Image 4">
-                <img src="assets/project1/5.PNG" class="carousel-img" alt="Project Image 5">
+                <img src="assets/project1/2.png" class="carousel-img" alt="Project Image 2">
+                <img src="assets/project1/3.png" class="carousel-img" alt="Project Image 3">
+                <img src="assets/project1/4.png" class="carousel-img" alt="Project Image 4">
+                <img src="assets/project1/5.png" class="carousel-img" alt="Project Image 5">
 
                 <button class="carousel-btn prev">&#10094;</button>
                 <button class="carousel-btn next">&#10095;</button>
@@ -118,25 +134,25 @@
         <div class="project">
             <div class="project-text">
                 <h3>12 Beads Game - SFML</h3>
-                <p>A C++ graphics game using SFML libraries. A strategic and engaging game with animations and save game option.
-                
+                <p>A C++ graphics game using SFML libraries. A strategic and engaging game with animations and save game
+                    option.
+
                 </p>
                 <a href="https://github.com/yourusername/car-rental-system" target="_blank" class="project-link">View on
                     GitHub</a>
             </div>
             <div class="carousel">
-                <img src="assets/project2/1.PNG" class="carousel-img active" alt="Project Image 1">
-                <img src="assets/project2/2.PNG" class="carousel-img" alt="Project Image 2">
-                <img src="assets/project2/3.PNG" class="carousel-img" alt="Project Image 3">
-                <img src="assets/project2/4.PNG" class="carousel-img" alt="Project Image 4">
-                <img src="assets/project2/5.PNG" class="carousel-img" alt="Project Image 5">
+                <img src="assets/project2/1.png" class="carousel-img active" alt="Project Image 1">
+                <img src="assets/project2/2.png" class="carousel-img" alt="Project Image 2">
+                <img src="assets/project2/3.png" class="carousel-img" alt="Project Image 3">
+                <img src="assets/project2/4.png" class="carousel-img" alt="Project Image 4">
+                <img src="assets/project2/5.png" class="carousel-img" alt="Project Image 5">
 
                 <button class="carousel-btn prev">&#10094;</button>
                 <button class="carousel-btn next">&#10095;</button>
             </div>
 
         </div>
-
     </section>
 
     <section id="contact" class="reveal contact-section">
@@ -179,6 +195,8 @@
             </div>
         </div>
     </section>
+
+    <button onclick="scrollToTop()" id="scrollTopBtn" aria-label="Scroll to top">&#8679;</button>
 
     <footer>
         <p>&copy; 2025 Ahmad Muaz</p>
